<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_MyViewModel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/my_view_model"
        android:radius="15dp"
        android:backgroundTint="@color/BZ2" />

    <Button
        android:id="@+id/btn_MyRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/my_recycler_view"
        android:radius="15dp"
        android:backgroundTint="@color/BZ3" />

    <Button
        android:id="@+id/btn_MyNavigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/my_navigation"
        android:radius="15dp"
        android:backgroundTint="@color/BZ4" />
    <Button
        android:id="@+id/btn_MyActionBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:text="@string/my_actionbar"
        android:radius="15dp"
        android:backgroundTint="@color/BZ5" />

</LinearLayout>